Added CMPT 370 Project

--- a/index.html
+++ b/index.html
@@ -63,6 +63,24 @@
 						</div>
 					</section>
 
+					<section id="third">
+						<header>
+							<h2>DeagerVision</h2>
+							<p><a href="https://github.com/aljoshuarollo/DeagerVision">Github</a></p>
+						</header>
+						<div class="content">
+							<p>
+								<strong>Group Project :</strong>
+								Created a web application that pushed people into creating smaller goals to eventually
+								lead up to their bigger goal.
+
+								Designed the UI of the client and trainer profiles, landing page, and login and register pages.
+								Collaborated with team members to create functionalities such as adding and editinig goals and displaying
+								current goals.
+							</p>
+						</div>
+					</section>
+
 				<!-- Section -->
 					<!-- <section>
 						<header>
